Project restructed - Database redesigned - back-end server updated - app layout implemented
