# horton/go/model_job_report.go
@@ -1,6 +1,6 @@
 /*
- * Horton Golang Server
- * John Shields
+ * Horton
+ *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * API version: 1.0.0
@@ -10,15 +10,23 @@
 package openapi
 
 type JobReport struct {
-	Id int32 `json:"id,omitempty"`
+	JobReportId int32 `json:"jobReportId,omitempty"`
+
+	WorkerId int32 `json:"workerId,omitempty"`
+
+	WorkDoneId int32 `json:"workDoneId,omitempty"`
 
 	TimeDate string `json:"timeDate,omitempty"`
 
-	Location string `json:"location,omitempty"`
+	VehicleModel string `json:"vehicleModel,omitempty"`
 
-	Vehicle string `json:"vehicle,omitempty"`
+	VehicleReg string `json:"vehicleReg,omitempty"`
 
-	Description string `json:"description,omitempty"`
+	VehicleLocation string `json:"vehicleLocation,omitempty"`
 
-	Solution string `json:"solution,omitempty"`
+	MilesOnVehicle int32 `json:"milesOnVehicle,omitempty"`
+
+	Warranty string `json:"warranty,omitempty"`
+
+	Breakdown string `json:"breakdown,omitempty"`
 }
