# horton/go/routers.go
@@ -1,6 +1,6 @@
 /*
- * Horton Golang Server
- * John Shields
+ * Horton
+ *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * API version: 1.0.0
@@ -11,6 +11,7 @@ package openapi
 
 import (
 	"net/http"
+
 	"github.com/gin-gonic/gin"
 )
 
@@ -47,8 +48,6 @@ func CORS() gin.HandlerFunc {
                 c.Next()
         }
 }
-
-
 
 // NewRouter returns a new router.
 func NewRouter() *gin.Engine {
@@ -111,6 +110,13 @@ var routes = Routes{
 		"/api/v1/jobReports/:jobReportId",
 		DeleteReport,
 	},
+
+	//{
+	//	"GetCustomerReports",
+	//	http.MethodGet,
+	//	"/api/v1/jobReports/:customerName",
+	//	GetCustomerReports,
+	//},
 
 	{
 		"GetReport",
